feat: add stripe subscription and enable swapping the state of a post easily
