# playbook-media-typescript-sdk/src/typescript-fetch/models/PublishPostBody.ts
@@ -1,0 +1,82 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Service
+ * Solomon AI Social Service
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: yoanyomba@solomon-ai.co
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { PostType } from './PostType';
+import {
+    PostTypeFromJSON,
+    PostTypeFromJSONTyped,
+    PostTypeToJSON,
+} from './PostType';
+
+/**
+ * 
+ * @export
+ * @interface PublishPostBody
+ */
+export interface PublishPostBody {
+    /**
+     * 
+     * @type {string}
+     * @memberof PublishPostBody
+     */
+    postId: string;
+    /**
+     * 
+     * @type {PostType}
+     * @memberof PublishPostBody
+     */
+    postType: PostType;
+}
+
+/**
+ * Check if a given object implements the PublishPostBody interface.
+ */
+export function instanceOfPublishPostBody(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "postId" in value;
+    isInstance = isInstance && "postType" in value;
+
+    return isInstance;
+}
+
+export function PublishPostBodyFromJSON(json: any): PublishPostBody {
+    return PublishPostBodyFromJSONTyped(json, false);
+}
+
+export function PublishPostBodyFromJSONTyped(json: any, ignoreDiscriminator: boolean): PublishPostBody {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'postId': json['postId'],
+        'postType': PostTypeFromJSON(json['postType']),
+    };
+}
+
+export function PublishPostBodyToJSON(value?: PublishPostBody | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'postId': value.postId,
+        'postType': PostTypeToJSON(value.postType),
+    };
+}
+
