# playbook-media-typescript-sdk/src/typescript-fetch/models/PublishPostResponse.ts
@@ -1,0 +1,94 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Service
+ * Solomon AI Social Service
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: yoanyomba@solomon-ai.co
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { PollPost } from './PollPost';
+import {
+    PollPostFromJSON,
+    PollPostFromJSONTyped,
+    PollPostToJSON,
+} from './PollPost';
+import type { Post } from './Post';
+import {
+    PostFromJSON,
+    PostFromJSONTyped,
+    PostToJSON,
+} from './Post';
+
+/**
+ * 
+ * @export
+ * @interface PublishPostResponse
+ */
+export interface PublishPostResponse {
+    /**
+     * 
+     * @type {Post}
+     * @memberof PublishPostResponse
+     */
+    regularPost?: Post;
+    /**
+     * 
+     * @type {PollPost}
+     * @memberof PublishPostResponse
+     */
+    pollPost?: PollPost;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof PublishPostResponse
+     */
+    success?: boolean;
+}
+
+/**
+ * Check if a given object implements the PublishPostResponse interface.
+ */
+export function instanceOfPublishPostResponse(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function PublishPostResponseFromJSON(json: any): PublishPostResponse {
+    return PublishPostResponseFromJSONTyped(json, false);
+}
+
+export function PublishPostResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): PublishPostResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'regularPost': !exists(json, 'regularPost') ? undefined : PostFromJSON(json['regularPost']),
+        'pollPost': !exists(json, 'pollPost') ? undefined : PollPostFromJSON(json['pollPost']),
+        'success': !exists(json, 'success') ? undefined : json['success'],
+    };
+}
+
+export function PublishPostResponseToJSON(value?: PublishPostResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'regularPost': PostToJSON(value.regularPost),
+        'pollPost': PollPostToJSON(value.pollPost),
+        'success': value.success,
+    };
+}
+
